# QUIPPER

./: README.md  app.py  pyproject.toml  requirements.txt
data/: generate_sample_data.py  student_data.csv
models/: chatbot.py  dropout_predictor.py  sentiment_analyzer.py
models/saved/: dropout_model.pkl  scaler.pkl
