[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quipper-dashboard"
version = "1.0.0"
description = "AI Learning Analytics Dashboard for Quipper"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Quipper AI Team"}]

dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.12.0",
    "joblib>=1.3.0",
]
